# test

./: .gitignore  CMakeLists.txt  README.md  REVIEW_NOTES.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  build.ps1  restore_sqlite.ps1  start.bat  start.ps1  start_website.bat
data/: dict.txt
src/: main.cpp  persistence.cpp  persistence.h
static/: app.js  index.html  styles.css  web.css  web.html  web.js
tests/: smoke_test.ps1
